--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #0b5c4c;
+  background-color: #006400;
   color: #111;
   display: flex;
   flex-direction: column;
@@ -39,6 +39,7 @@ header h1 {
 
 header h2, header p {
   font-family: 'Poppins', sans-serif;
+  color: #ffffff;         
 }
 
 header p {
@@ -205,7 +206,7 @@ button:hover:not(:disabled) {
 .info-section h3 {
   font-family: 'Bebas Neue', sans-serif;
   font-size: 1.8rem;
-  color: #0b5c4c;
+  color: #006400;
   margin-bottom: 1.5rem;
   letter-spacing: 0.5px;
 }
@@ -234,7 +235,7 @@ button:hover:not(:disabled) {
   display: block;
   font-size: 1.1rem;
   font-weight: 600;
-  color: #0b5c4c;
+  color: #006400;
   margin-bottom: 0.5rem;
 }
 
@@ -289,4 +290,15 @@ button:hover:not(:disabled) {
     padding: 0.8rem;
     text-align: center;
   }
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
 }
